--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -63,10 +63,10 @@ set footer_classes = ' ' ~
 
 <header class="{{ header_classes }}">
   {{ page.header }}
-  {% if page.nav_branding or page.nav_main or page.nav_additional %}
+  {% if page.branding or page.nav_main or page.nav_additional %}
   <nav class="{{ nav_classes }}">
     <div class="{{ b5_top_container }} d-flex">
-      {{ page.nav_branding }}
+      {{ page.branding }}
 
       <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
               data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
