--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -4,6 +4,7 @@
 // primary B.C. brand
 $colorBrand-primary: #003366;
 $colorBrand-secondary: #fcba19;
+$colorBrand-secondary-a11y: #CA8800;
 
 // backgrounds
 $colorAccent-primary: #38598a;
