--- a/scss/style.scss
+++ b/scss/style.scss
@@ -37,7 +37,9 @@
   './components/search',
   './components/lists',
   './components/subway',
-  './components/nav_book';
+  './components/nav_book',
+  './components/block_idir'
+  ;
 
 // #################################
 // DEV STYLES: disable in production
