--- a/css/style.css
+++ b/css/style.css
@@ -25325,6 +25325,18 @@ ul.bb-nav-book {
   }
 }
 
+.bb-link-login {
+  color: #fff;
+  background-color: transparent;
+  border: 0;
+  font-size: 0.87em;
+}
+.bb-link-login:hover, .bb-link-login:focus {
+  opacity: 80%;
+  -webkit-transition: all 0.15s ease-in-out;
+  transition: all 0.15s ease-in-out;
+}
+
 html.bcbb-theme .navbar-brand a.site-title {
   color: #fff;
   text-decoration: none;
