--- a/scss/style.scss
+++ b/scss/style.scss
@@ -38,7 +38,7 @@
   './components/lists',
   './components/subway',
   './components/nav_book',
-  './components/block_idir'
+  './components/buttons_links'
   ;
 
 // #################################
