--- a/css/style.css
+++ b/css/style.css
@@ -25030,6 +25030,11 @@ html.bcbb-theme .footer a:visited {
   color: #9982ff;
 }
 
+.bb-fa-glyph {
+  font-family: "Font Awesome 6 Free" !important;
+  font-weight: 900 !important;
+}
+
 .bc-gov-alertbanner {
   border: 0.0625em solid transparent;
   border-radius: 0.25em;
