Make toc-back-to-top.html.twig return an empty line
This is required to prevent an error in testing.

Fixes issue introduced in f6a00f6.

--- a/templates/navigation/toc-back-to-top.html.twig
+++ b/templates/navigation/toc-back-to-top.html.twig
@@ -12,3 +12,5 @@
  * @ingroup themeable
  */
 #}
+
+{# Leave this comment so that the template returns a single blank line. This is required to prevent an error in testing. #}
