add padding to summary when used in conjunction with subway

--- a/css/ck5style.css
+++ b/css/ck5style.css
@@ -21766,12 +21766,11 @@ a > .ck-content code {
 .ck-content ul.bb-subway li a .active::before,
 .ck-content ul.bb-subway li a .media-library-view--widget .view-header a.is-active::before,
 .ck-content .media-library-view--widget .view-header ul.bb-subway li a a.is-active::before {
-  -webkit-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
+  -webkit-transition: background-color 0.3s ease-in-out;
+  transition: background-color 0.3s ease-in-out;
   -webkit-transform: scale(1.15, 1.15);
           transform: scale(1.15, 1.15);
-  border-radius: 50%;
-  background: #38598a;
+  background-color: #38598a;
 }
 .ck-content ul.bb-subway li > ul::before {
   z-index: -999;
@@ -21799,6 +21798,11 @@ a > .ck-content code {
 }
 .ck-content ul.bb-subway > li:only-child::before {
   background-image: none;
+}
+.ck-content ul.bb-subway .summary {
+  margin-left: 1.5em;
+  margin-top: -0.5em;
+  padding-bottom: 1em;
 }
 .ck-content .book-navigation {
   border-top: 1px solid #fcba19;
