--- a/scss/components/_subway.scss
+++ b/scss/components/_subway.scss
@@ -81,10 +81,9 @@ ul.bb-subway {
       .active {
         font-weight: 600;
         &::before {
-         transition: all .3s ease-in-out;
+         transition: background-color .3s ease-in-out;
          transform: scale(1.15,1.15);
-         border-radius: 50%;
-        background: $stroke_color;
+        background-color: $stroke_color;
         }       
       }
     }
@@ -123,5 +122,10 @@ ul.bb-subway {
     &:only-child::before {
       background-image: none;
   }
+  }
+  .summary {
+    margin-left: 1.5em;
+    margin-top: -.5em;
+    padding-bottom: 1em;
   }
 }
